fixed scrollbars to be look better on frontpage

--- a/FrontEnd/src/components/CarouselEventComponent/CarouselEventComponent.css
+++ b/FrontEnd/src/components/CarouselEventComponent/CarouselEventComponent.css
@@ -40,4 +40,10 @@
         width: 60%;
     }
 }
+
+@media (min-width: 2300px) {
+    .movie-bg-img{
+      transform: scale(1.4);
+    }
+}
  
