--- a/FrontEnd/src/components/CarouselMemberComponent/CarouselMemberComponent.css
+++ b/FrontEnd/src/components/CarouselMemberComponent/CarouselMemberComponent.css
@@ -92,3 +92,10 @@
     margin-top: -5em;
   }
 }
+
+@media (min-width: 2300px) {
+  .member-carousel-container{
+    transform: scale(1.4);
+  }
+}
+
