--- a/FrontEnd/src/components/CarouselWelcomeComponent/CarouselWelcomeComponent.css
+++ b/FrontEnd/src/components/CarouselWelcomeComponent/CarouselWelcomeComponent.css
@@ -46,10 +46,5 @@
       
   }
 
-  @media screen and (max-device-width: 700px) 
-    and (orientation: landscape) {
-      .welcome-carousel-container {
-        height: 72lvh; 
-      }
-}
+  
 
