--- a/FrontEnd/src/components/FrontCarouselComponent/FrontCarouselComponent.css
+++ b/FrontEnd/src/components/FrontCarouselComponent/FrontCarouselComponent.css
@@ -17,7 +17,7 @@
 
   @media (min-width: 800px) {
     .front-carousel {
-      height: 90vh;
+      height: 95vh;
       width: 100%;
     }
   
