--- a/FrontEnd/src/components/MovieCardComponent/MovieCardComponent.css
+++ b/FrontEnd/src/components/MovieCardComponent/MovieCardComponent.css
@@ -83,7 +83,7 @@
     color: #C699EA;
     height: 50px;
     text-overflow: ellipsis;
-    overflow: hidden;
+    overflow-y: scroll;
     margin: .5em; 
   }
   
@@ -129,9 +129,11 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      overflow-y: scroll;
+      overflow-y: hidden;
       width: 80%;
       margin: 0 auto; 
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px inset;
+      border-radius: 16px;
     }
 
     .movie-card-header {
@@ -143,6 +145,10 @@
       background: none;
       box-shadow: none;
       position: relative;
+    }
+
+    .movie-card-info::-webkit-scrollbar {
+      display: none;
     }
   
     .movie-card-img {
