--- a/FrontEnd/src/pages/MovieInfo.css
+++ b/FrontEnd/src/pages/MovieInfo.css
@@ -1,7 +1,7 @@
 .movieinfo-container{
     font-family: "Jost", sans-serif;
     margin: auto;
-    height: 110vh;
+    height: 120vh;
     padding-top: 3em;
     margin-top: 4em; 
 }
